--- a/config/database.yml
+++ b/config/database.yml
@@ -3,11 +3,22 @@
 #
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
+# development:
+#   adapter: sqlite3
+#   database: db/development.sqlite3
+#   pool: 5
+#   timeout: 5000
+
 development:
-  adapter: sqlite3
-  database: db/development.sqlite3
+  adapter:  postgresql
+  encoding: unicode
   pool: 5
-  timeout: 5000
+  database: <%= ENV['POSTIT_DEV_DATABASE'] %>
+  username: <%= ENV['POSTIT_DEV_USER'] %>
+  password: <%= ENV['POSTIT_DEV_PASSWORD'] %>
+  host: <%= ENV['POSTIT_DEV_HOST'] %>
+  port: <%= ENV['POSTIT_DEV_PORT'] %>
+
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
