--- a/config/database.yml
+++ b/config/database.yml
@@ -9,28 +9,48 @@
 #   pool: 5
 #   timeout: 5000
 
-development:
-  adapter:  postgresql
+# heroku database
+# development:
+#   adapter:  postgresql
+#   encoding: unicode
+#   pool: 5
+#   database: <%= ENV['POSTIT_DEV_DATABASE'] %>
+#   username: <%= ENV['POSTIT_DEV_USER'] %>
+#   password: <%= ENV['POSTIT_DEV_PASSWORD'] %>
+#   host: <%= ENV['POSTIT_DEV_HOST'] %>
+#   port: <%= ENV['POSTIT_DEV_PORT'] %>
+
+default: &default
+  adapter: postgresql
   encoding: unicode
   pool: 5
-  database: <%= ENV['POSTIT_DEV_DATABASE'] %>
-  username: <%= ENV['POSTIT_DEV_USER'] %>
-  password: <%= ENV['POSTIT_DEV_PASSWORD'] %>
-  host: <%= ENV['POSTIT_DEV_HOST'] %>
-  port: <%= ENV['POSTIT_DEV_PORT'] %>
+  username: <%= ENV['USERNAME'] %>
+  password: <%= ENV['PASSWORD'] %>
+  host:     <%= ENV['IP'] %>
 
+development:
+  <<: *default
+  database: postit_app_development
+  
+test:
+  <<: *default
+  database: postit_app_test
+
+production:
+  <<: *default
+  database: postit_app_production
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-test:
-  adapter: sqlite3
-  database: db/test.sqlite3
-  pool: 5
-  timeout: 5000
+# test:
+#   adapter: sqlite3
+#   database: db/test.sqlite3
+#   pool: 5
+#   timeout: 5000
 
-production:
-  adapter: sqlite3
-  database: db/production.sqlite3
-  pool: 5
-  timeout: 5000
+# production:
+#   adapter: sqlite3
+#   database: db/production.sqlite3
+#   pool: 5
+#   timeout: 5000
